--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             }
 
             // API URL to get domain information
-            const url = `http://ip-api.com/json/${domain}`;
+            const url = `https://ip-api.com/json/${domain}`;
 
             fetch(url)
                 .then(response => {
