--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Computer Networking Project: Website Setup</title>
+    <title>Computer Networking Project: Website Setupss</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="javascript" href="script.css">
 </head>
 <body>
 
