--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section>
         <h2>1. Domain Name System (DNS) and Domain Configuration</h2>
         <p>The <strong>Domain Name System (DNS)</strong> is responsible for translating human-readable domain names (e.g., www.example.com) into IP addresses (e.g., 192.168.1.1) that computers can understand.</p>
-        <h3>Key Concepts:</h3>
+        <h3>Key Concepts: <img src ="https://as1.ftcdn.net/v2/jpg/05/27/50/56/1000_F_527505661_RgEM1kmzOnBB2f4UTloNoDYYT5X3APmX.jpg" alt="DNS" style="width:200px;height:40px;"></h3>
         <ul>
             <li><strong>DNS Records</strong>: Configuring DNS records such as A Records and CNAME Records.</li>
             <li><strong>A Record</strong>: Maps a domain name to an IP address.</li>
@@ -33,7 +33,7 @@
     </section>
 
     <section>
-        <h2>2. DNS Resolution (Using JavaScript)</h2>
+        <h2>2. DNS Resolution (Using JavaScript) <img src ="https://as2.ftcdn.net/v2/jpg/02/73/03/75/1000_F_273037500_WRMKngc1ffSzgzP58mjVMWjSZvl2JL3f.jpg" alt="DNS" style="width:500px;height:100px;"></h2>
         <p>In this section, you can enter a domain name to resolve it to an IP address. This feature demonstrates the basic functionality of DNS resolution using a JavaScript API.</p>
         
         <label for="domain">Enter Domain Name:</label>
@@ -44,7 +44,7 @@
     </section>
 
     <section>
-        <h2>3. IP Address and Hosting</h2>
+        <h2>3. IP Address and Hosting <img src ="https://as1.ftcdn.net/v2/jpg/09/78/44/04/1000_F_978440482_orKkdVXiT1xtVS5j3usx9n1yaEQppxw9.webp" alt="DNS" style="width:40px;height:40px;"></h2>
         <p>Every device connected to the internet has a unique identifier known as an <strong>IP address</strong>. Websites are hosted on servers, each of which has an IP address that users can connect to.</p>
         <h3>Key Concepts:</h3>
         <ul>
@@ -68,7 +68,7 @@
     </section>
 
     <section>
-        <h2>4. Protocols and Website Access</h2>
+        <h2>4. Protocols and Website Access <img src ="https://as2.ftcdn.net/v2/jpg/04/94/04/91/1000_F_494049118_9eAOfrO7T2d1TfJ9KgNPAcKMDWcWvDHN.jpg" alt="DNS" style="width:500px;height:100px;"></h2>
         <p>Websites are accessed using protocols, primarily <strong>HTTP</strong> (HyperText Transfer Protocol) and <strong>HTTPS</strong> (HyperText Transfer Protocol Secure).</p>
         <h3>Key Concepts:</h3>
         <ul>
