--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Computer Networking Project: Website Setup</title>
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/silviaraghav/networking-project@main/style.min.css">
-<script src="https://cdn.jsdelivr.net/gh/silviaraghav/networking-project@main/script.min.js"></script> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/silviaraghav/networking-project@main/style.min.css">
+<script src="https://cdn.jsdelivr.net/gh/silviaraghav/networking-project@main/script.min.js"></script>
 
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <!-- <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script> -->
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.4.0/purify.min.js"></script> 
    
